# metaflow-extensions-openlineage

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: lineage_flow.py  log_lineage.py
openlineage-metaflow/: pyproject.toml
openlineage-metaflow/src/openlineage_metaflow/: __init__.py  execute_sql.py  openlineage_decorator.py
