[project]
name = "metaflow-extensions-openlineage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "metaflow>=2.15.17",
    "numpy>=2.3.0",
    "openlineage-metaflow",
    "openlineage-python>=1.33.0",
    "openlineage-sql>=1.33.0",
    "sqlglot>=26.28.1",
]

[tool.uv.sources]
openlineage-metaflow = { path = "openlineage-metaflow", editable = true }
